--- a/templates/rooms/home.html
+++ b/templates/rooms/home.html
@@ -7,9 +7,20 @@ Home
 
 {% block content %}
 
-{% for room in potato  %}
+{% for room in page.object_list  %}
 <h1>{{room.name}} / ${{room.price}}</h1>
 {% endfor %}
 
+<h5>
+    {% if page.has_previous %}
+    <a href="?page={{page.previous_page_number}}">Previous</a>
+    {% endif %}
+
+    Page {{page.number}} of {{page.paginator.num_pages}}
+    {% if page.has_next  %}
+    <!-- 위 코드가 없다면 다음페이지가 없기때문에 에러가 생김. -->
+    <a href="?page={{page.next_page_number}}">Next</a>
+    {% endif %}
+</h5>
 
 {% endblock content %}
