--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -6,18 +6,27 @@ Log In
 
 {% block search-bar %}
 {% endblock search-bar %}
-
 {% block content %}
+<div class="container lg:w-5/12 md:w-1/2 xl:w-1/4 mx-auto my-10 flex flex-col items-center border p-6 border-gray-400">
 
-{% include 'partials/social_login.html' %}
+    {% include 'partials/social_login.html' %}
+    <!-- 
+    <form method="POST" action="{% url "users:login" %}">
+        {% csrf_token %}
+         로그인 보안을 위한 것. 위 토큰은 기본적으로 post request가 이 웹사이트에서 확인하는 용도 
+        {{form.as_p}} 
+        as_p는 p태그로 감싸주는 것
+        {{form.email}}
+        {{form.password}}
+        <button class="btn bg-red-500 text-white">Login</button>
+    </form>
+    -->
+    {% include 'mixins/auth/auth_form.html' with form=form cta="Log in" %}
 
-<form method="POST" action="{% url "users:login" %}">
-    {% csrf_token %}
-    <!-- 로그인 보안을 위한 것. 위 토큰은 기본적으로 post request가 이 웹사이트에서 확인하는 용도 -->
-    {{form.as_p}}
-    <!-- as_p는 p태그로 감싸주는 것. -->
-    <button>Login</button>
-</form>
 
-
+    <div class="mt-5">
+        <span class="mr-2">Don't have an account?</span>
+        <a href="{% url 'users:signup' %}" class="text-teal-500 font-medium">Sign up</a>
+    </div>
+</div>
 {% endblock content %}
