--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -19,13 +19,24 @@
     @apply text-center rounded-sm py-5 font-light text-lg w-full;
   }
   
-  input {
+  input,
+  textarea,
+  select {
     @apply rounded-sm py-5 font-light text-lg w-full text-left border border-gray-600 px-5;
     &:focus {
       @apply outline-none border-teal-500;
     }
   }
 
+
+  textarea {
+    resize: none;
+    height: 100px;
+  }
+  
+  select {
+    height: 50px;
+  }
 
 form {
     .input {
@@ -76,5 +87,13 @@ form {
   }
 }
 
+.btn-link {
+  @apply text-center py-3 rounded-lg font-light text-lg w-full text-white bg-red-500;
+}
+
+
+.border-section {
+  @apply border-b border-gray-400 pb-8 mt-8;
+}
 
 @tailwind utilities;
