--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -2,54 +2,57 @@
 @tailwind components;
 
 .search-box {
-    transition: box-shadow 0.2s linear;
-  }
+  transition: box-shadow 0.2s linear;
+}
 
 .nav_link {
-    @apply ml-6 border-b-2 border-white h-full flex items-center;
-    a {
+  @apply ml-6 border-b-2 border-white h-full flex items-center;
+  a {
     @apply py-10 px-5;
-    }
-    &:hover {
+  }
+  &:hover {
     @apply border-gray-600;
-    }
+  }
 }
 
 .btn {
-    @apply text-center rounded-sm py-5 font-light text-lg w-full;
-  }
-  
-  input,
-  textarea,
-  select {
-    @apply rounded-sm py-5 font-light text-lg w-full text-left border border-gray-600 px-5;
-    &:focus {
-      @apply outline-none border-teal-500;
-    }
-  }
+  @apply text-center rounded-sm py-5 font-light text-lg w-full;
+}
 
+.btn-link {
+  @apply text-center py-3 rounded-lg font-light text-lg w-full text-white bg-red-500;
+}
 
-  textarea {
-    resize: none;
-    height: 100px;
+input,
+textarea,
+select {
+  @apply rounded-sm py-5 font-light text-lg w-full text-left border border-gray-600 px-5;
+  &:focus {
+    @apply outline-none border-teal-500;
   }
-  
-  select {
-    height: 50px;
-  }
+}
+
+textarea {
+  resize: none;
+  height: 100px;
+}
+
+select {
+  height: 50px;
+}
 
 form {
-    .input {
-        @apply mb-3 w-full;
-        &.has_error {
-            input {
-                @apply bg-red-200 border-gray-600;
-                &:focus {
-                    @apply border-gray-600;
-                }
-            }
+  .input {
+    @apply mb-3 w-full;
+    &.has_error {
+      input {
+        @apply bg-red-200 border-gray-600;
+        &:focus {
+          @apply border-gray-600;
         }
+      }
     }
+  }
 }
 
 @keyframes messageFadeIn {
@@ -87,13 +90,19 @@ form {
   }
 }
 
-.btn-link {
-  @apply text-center py-3 rounded-lg font-light text-lg w-full text-white bg-red-500;
-}
-
-
 .border-section {
   @apply border-b border-gray-400 pb-8 mt-8;
+}
+
+.cal-grid {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-gap: 10px;
+  justify-items: center;
+}
+
+.cal-number {
+  @apply w-full text-center rounded p-1 cursor-pointer;
 }
 
 @tailwind utilities;
