--- a/templates/mixins/user_avatar.html
+++ b/templates/mixins/user_avatar.html
@@ -1,5 +1,8 @@
 {% if user.avatar %}
-<div class="{{h_and_w|default:'h-20 w-20'}} rounded-full bg-cover" style="background-image: url({{user.avatar.url}});">
+<div
+    class="{{h_and_w|default:'h-20 w-20'}} bg-gray-700 rounded-full text-white flex justify-center items-center overflow-hidden">
+    <span class="{{text|default:'text-3xl'}}">{{user.first_name|first}}</span>
+    <!-- <div class="{{h_and_w|default:'h-20 w-20'}} rounded-full bg-cover" style="background-image: url({{user.avatar.url}});"> 이미지파일-->
     {% else %}
     <div
         class="{{h_and_w|default:'h-20 w-20'}} bg-gray-700 rounded-full text-white flex justify-center items-center overflow-hidden">
